[gd_scene load_steps=4 format=2]

[ext_resource path="res://interface/Register.gd" type="Script" id=1]
[ext_resource path="res://themes/kenneyUI-blue.tres" type="Theme" id=2]
[ext_resource path="res://themes/kenneyUI-yellow.tres" type="Theme" id=3]

[node name="Register" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1048.0
margin_bottom = 623.0
color = Color( 0.443137, 0.854902, 1, 1 )

[node name="Container" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -132.0
margin_top = -100.0
margin_right = 140.0
margin_bottom = 205.0

[node name="VBoxContainer" type="VBoxContainer" parent="Container"]
margin_right = 272.0
margin_bottom = 191.0

[node name="email" type="VBoxContainer" parent="Container/VBoxContainer"]
margin_right = 272.0
margin_bottom = 61.0

[node name="Label" type="Label" parent="Container/VBoxContainer/email"]
margin_right = 272.0
margin_bottom = 18.0
text = "Email"

[node name="LineEdit" type="LineEdit" parent="Container/VBoxContainer/email"]
margin_top = 22.0
margin_right = 272.0
margin_bottom = 61.4343

[node name="password" type="VBoxContainer" parent="Container/VBoxContainer"]
margin_top = 65.0
margin_right = 272.0
margin_bottom = 126.0

[node name="Label" type="Label" parent="Container/VBoxContainer/password"]
margin_right = 272.0
margin_bottom = 18.0
text = "Password"

[node name="LineEdit" type="LineEdit" parent="Container/VBoxContainer/password"]
margin_top = 22.0
margin_right = 272.0
margin_bottom = 61.4343

[node name="confirm pass" type="VBoxContainer" parent="Container/VBoxContainer"]
margin_top = 130.0
margin_right = 272.0
margin_bottom = 191.0

[node name="Label" type="Label" parent="Container/VBoxContainer/confirm pass"]
margin_right = 272.0
margin_bottom = 18.0
text = "Confirm Password"

[node name="LineEdit" type="LineEdit" parent="Container/VBoxContainer/confirm pass"]
margin_top = 22.0
margin_right = 272.0
margin_bottom = 61.4343

[node name="RegisterButton" type="Button" parent="Container"]
margin_top = 195.0
margin_right = 272.0
margin_bottom = 237.251
text = "REGISTER"

[node name="Back" type="Button" parent="Container"]
margin_top = 241.0
margin_right = 272.0
margin_bottom = 283.251
theme = ExtResource( 3 )
text = "GO BACK"

[node name="Notification" type="Label" parent="Container"]
margin_top = 287.0
margin_right = 272.0
margin_bottom = 305.0
autowrap = true

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="Title" type="Label" parent="."]
margin_left = -2.0
margin_top = 66.0
margin_right = 1031.0
margin_bottom = 143.0
text = "REGISTER SCREEN"
align = 1

[connection signal="pressed" from="Container/RegisterButton" to="." method="_on_RegisterButton_pressed"]
[connection signal="pressed" from="Container/Back" to="." method="_on_Back_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
